--- a/.github/workflows/my-workflow.yml
+++ b/.github/workflows/my-workflow.yml
@@ -1,9 +1,9 @@
 name: CI
 on:
     push:
-        branches: [ "master" ]
+        branches: [ "main" ]
     pull_request:
-        branches: [ "master" ]
+        branches: [ "main" ]
 jobs:
   compose_and_test:
     runs-on: ubuntu-latest
