--- a/.github/workflows/my-workflow.yml
+++ b/.github/workflows/my-workflow.yml
@@ -10,7 +10,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Compose
-        uses: adambirds/docker-compose-action@v1.3.0
+        uses: isbang/compose-action@v1.5.1
         with:
             compose-file: "./docker-compose.yml"
             down-flags: "--volumes"
@@ -19,5 +19,7 @@ jobs:
                     hospital-auth
                     hospital-database
                     hospital-database-test
-            test-container: hospital-app
-            test-command: npm test
+      - name: Test
+        run: |
+          cd hospital
+          npm test
