--- a/.github/workflows/my-workflow.yml
+++ b/.github/workflows/my-workflow.yml
@@ -9,15 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Compose
-        uses: adambirds/docker-compose-action@v1.3.0
-        with:
-            compose-file: "./docker-compose.yml"
-            down-flags: "--wait"
-            services: |
-                    hospital-app
-                    hospital-auth
-                    hospital-database
-                    hospital-database-test
-            test-container: hospital-app
-            test-command: npm test
+      - name: "Set up environment"
+        run: docker compose -f docker-compose.yml up -d --wait 
+      - name: "Run tests"
+        run: docker exec -it hospital_dockerized-hospital-app-1 npm test
