--- a/.github/workflows/my-workflow.yml
+++ b/.github/workflows/my-workflow.yml
@@ -12,4 +12,4 @@ jobs:
       - name: "Set up environment"
         run: docker compose -f docker-compose.yml up -d --wait 
       - name: "Run tests"
-        run: docker exec -it hospital-hospital-app-1 npm test
+        run: docker exec hospital-hospital-app-1 npm test
