--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ services:
     image: postgres:latest
     restart: always
     environment:
-      POSTGRES_DB: ${DB_NAME}
+      POSTGRES_DB: hospital-flow
       POSTGRES_PASSWORD: ${DB_PASSWORD}
       POSTGRES_USER: ${DB_USER}
     volumes:
