--- a/hospital/package.json
+++ b/hospital/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "dev": "node server.js",
-    "test": "cross-env NODE_ENV=test jest --testTimeout=10000 -i --coverage"
+    "test": "cross-env NODE_ENV=test jest --testTimeout=10000 -w 1"
   },
   "author": "",
   "license": "ISC",
