--- a/.github/workflows/my-workflow.yml
+++ b/.github/workflows/my-workflow.yml
@@ -9,7 +9,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - name: Linting
+        run: npm run lint
       - name: "Set up environment"
-        run: docker compose -f docker-compose.yml up -d --wait 
+        run: docker compose -f docker-compose-test.yml up -d --wait 
       - name: "Run tests"
         run: docker exec hospital-hospital-app-1 npm test
