--- a/.github/workflows/my-workflow.yml
+++ b/.github/workflows/my-workflow.yml
@@ -6,7 +6,7 @@ on:
         branches: [ "main" ]
 jobs:
   compose_and_test:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     steps:
       - uses: actions/checkout@v3
       - name: "Set up environment"
