--- a/.github/workflows/my-workflow.yml
+++ b/.github/workflows/my-workflow.yml
@@ -11,3 +11,7 @@ jobs:
       - uses: actions/checkout@v3
       - name: "Set up environment"
         run: docker compose -f docker-compose-test.yml up -d --wait 
+      - name: Linting app
+        run: docker exec hospital-hospital-app-1 npm run lint
+      - name: "Run tests"
+        run: docker exec hospital-hospital-app-1 npm test
