--- a/hospital/package.json
+++ b/hospital/package.json
@@ -5,7 +5,9 @@
   "main": "server.js",
   "scripts": {
     "dev": "node server.js",
-    "test": "cross-env NODE_ENV=test jest --testTimeout=10000 -w 1"
+    "test": "cross-env NODE_ENV=test jest --testTimeout=10000 -w 1",
+    "lint": "npx eslint  . --ext .js",
+    "lint:fix": "npx eslint  . --ext .js --fix"
   },
   "author": "",
   "license": "ISC",
@@ -23,6 +25,11 @@
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
+    "eslint": "^8.53.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-import": "^2.29.0",
+    "eslint-plugin-n": "^16.3.1",
+    "eslint-plugin-promise": "^6.1.1",
     "jest": "^29.7.0",
     "supertest": "^6.3.3"
   }
