--- a/.github/workflows/my-workflow.yml
+++ b/.github/workflows/my-workflow.yml
@@ -12,6 +12,8 @@ jobs:
       - name: "Set up environment"
         run: docker compose -f docker-compose-test.yml up -d --wait 
       - name: Linting app
-        run: docker exec hospital-hospital-app-1 npm run lint
+        working-directory: ./hospital
+        run: npm run lint
       - name: "Run tests"
-        run: docker exec hospital-hospital-app-1 npm test
+        working-directory: ./hospital
+        run: npm test:local
