--- a/.github/workflows/my-workflow.yml
+++ b/.github/workflows/my-workflow.yml
@@ -11,6 +11,9 @@ jobs:
       - uses: actions/checkout@v3
       - name: "Set up environment"
         run: docker compose -f docker-compose-test.yml up -d --wait 
+      - name: Install dependencies
+        working-directory: ./hospital
+        run: npm ci
       - name: Linting app
         working-directory: ./hospital
         run: npm run lint
