--- a/hospital/package.json
+++ b/hospital/package.json
@@ -16,7 +16,10 @@
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
-    "pg-promise": "^11.5.4"
+    "pg-promise": "^11.5.4",
+    "cross-env": "^7.0.3",
+    "jest": "^29.7.0",
+    "supertest": "^6.3.3"
   },
   "jest": {
     "testEnvironment": "node",
@@ -25,13 +28,10 @@
     ]
   },
   "devDependencies": {
-    "cross-env": "^7.0.3",
     "eslint": "^8.53.0",
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-import": "^2.29.0",
     "eslint-plugin-n": "^16.3.1",
-    "eslint-plugin-promise": "^6.1.1",
-    "jest": "^29.7.0",
-    "supertest": "^6.3.3"
+    "eslint-plugin-promise": "^6.1.1"
   }
 }
